Fix: Resolve text overflow issue in login page button

--- a/weblate/static/styles/main.css
+++ b/weblate/static/styles/main.css
@@ -503,6 +503,7 @@ th:hover .sort-icon.sort-up {
 
 .btn-auth {
   padding: 5px;
+  width: auto;
 }
 
 .btn-auth a {
